<resources>
    <string name="app_name">SPOTA</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="login_failed">Akun tidak ditemukan. Pastikan Nomor Identitas dan Password benar.</string>
    <string name="menu_home">Home</string>
    <string name="menu_outline">Outline</string>
    <string name="menu_schedule">Jadwal</string>
    <string name="search_placeholder">Pencarian</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_notification">Pemberitahuan</string>
    <string name="menu_about">Tentang Aplikasi</string>
    <string name="menu_logout">Logout</string>
    <string name="drawer_toggle_open">Open Drawer</string>
    <string name="drawer_toggle_close">Close Drawer</string>
    <string name="search_title">Pencarian</string>
    <string name="search_hint">Cari Outline</string>
    <string name="see_review_button">Lihat Review</string>
    <string name="review_menu">Review</string>
    <string name="error_empty">Terjadi Kesalahan !</string>
    <string name="reply">Balas</string>
    <string name="add_reply">Tambahkan Komentar</string>
    <string name="sub_menu">&#8942;</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_name">Nama Anda . .</string>
    <string name="update_email">Email Anda . .</string>
    <string name="update_password">Password Baru . .</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="update_password_message">* Kosongkan Field Password bila tidak ingin mengganti</string>
    <string name="menu_update_profile">Update Profile</string>
    <string name="first_part">BAB I</string>
    <string name="second_part">BAB II</string>
    <string name="third_part">BAB III</string>
    <string name="fourth_part">BAB IV</string>
    <string name="fifth_part">BAB V</string>
    <string name="uploaded_at">Diupload pada : </string>
    <string name="updated_at">Terakhir diperbaharui pada : </string>
    <string name="last_commented">Terakhir dikomentari : </string>
    <string name="preoutline_menu">Preoutline</string>
    <string name="download">Download</string>
    <string name="connetion_failure">Koneksi Bermasalah !</string>
    <string name="consultation_fail">Anda tidak memiliki daftar konsultasi !</string>
    <string name="comment_count_placeholder">Jumlah Komentar : </string>
    <string name="menu_consultation">Konsultasi</string>
    <string name="old_password">Password Lama . .</string>
</resources>
